Add first section with image and signup button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <div class="header">
         <div class="header-left">CUTESICLE POPSICLE</div>
         <div class="header-right">
@@ -19,6 +20,19 @@
             </div>
         </div>
     </div>
+
+    <div class="first-section">
+        <div class="first-left">
+            <div class="title">This website is awesome</div>
+            <div class="subtext">This website has some subtext under the main title. It's a smaller font and the color
+                is lower contrast</div>
+            <button>Sign Up</button>
+        </div>
+        <div class="first-right">
+            <img src="cute-image.jpeg">
+        </div>
+    </div>
+
 </body>
 
 </html>
