Add cute animals and quote sections

--- a/index.html
+++ b/index.html
@@ -23,16 +23,65 @@
 
     <div class="first-section">
         <div class="first-left">
-            <div class="title">This website is awesome</div>
-            <div class="subtext">This website has some subtext under the main title. It's a smaller font and the color
-                is lower contrast</div>
+            <div class="title">CUTENESS OVERLOAD!</div>
+            <div class="subtext"> Sign up to receive one cute photo a day! </div>
             <button>Sign Up</button>
         </div>
         <div class="first-right">
             <img src="cute-image.jpeg">
         </div>
     </div>
+    
+    <div class ="second-section">
+        <div class="section-title">
+            Some of our finest cutsicles!
+        </div>
+        <div class="image-carousel">
+            <div class="card">
+                <img src="dog.jpg">
+                <div class="img-subtext">so about that car warranty</div>
+            </div>
+            <div class="card">
+                <img src="monkey.jpg">
+                <div class="img-subtext">dont mind me, just monkeying around</div>
+            </div>
+            <div class="card">
+                <img src="hedgehog.jpg">
+                <div class="img-subtext">just looking for my quills</div>
+            </div>
+            <div class="card">
+                <img src="panda.jpg">
+                <div class="img-subtext">roses are red my food is green</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote-section">
+        <div class = "quote">
+            <div class ="quote-text">"I am forever struck by the great paradox of 'Cute Aggression,' where the animals are so adorable, you clench your fists, grit your teeth, and inexplicably want to squish them with love until they are nothing."</div>
+            <div class = "attribution"> - You reading this site, probably</div>
+        </div>
+    </div>
+
+
+    <div class="call-to-action">
+        <div class = "call-box">
+            <div class ="call-box-left">
+                <div class ="call-box-header">
+                    Sign-up now! You know you want to!
+                </div>
+                <div class = "call-box-text">
+                    Just click that really appealing button on the right and you'll be all signed up!
+                </div>
+            </div>
+            <div class = "call-box-right">
+                <button class="sign-up">Sign Up</button>
+            </div>
+        </div>
+
+    </div>
+
+
 
 </body>
-
 </html>
