--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                 <button class="sign-up">Sign Up</button>
             </div>
         </div>
-
     </div>
+
+    <div class ="footer">&copy; Copyright 2023 Santosh Vallabhaneni</div>
 
 
 
